# Pong

./: .travis.yml  Cargo.toml  readme.org
src/: ball.rs  board.rs  config.rs  game.rs  io.rs  main.rs  paddle.rs  score.rs  shape.rs  state.rs  ui.rs
src/geometry/: angle.rs  line.rs  line_segment.rs  line_segment_intersection.rs  line_segments.rs  mod.rs  point.rs  scalar.rs  slope.rs  vector.rs
