[package]
name = "pong"
version = "0.1.0"
authors = ["William Clarke <wmmclarke@gmail.com>"]

[dependencies]
num = "0.1.40"
lazy_static = "0.2.8"

log = "0.3.8"
env_logger = "0.4.3"

ncurses = "5.86.0"

rand = "0.3"

clippy = {version = "*", optional = true}

# for clippy: (no idea what it does....)
[features]
default = []
